syntax = "proto3";

package Billboard;
import "google/protobuf/Empty.proto";

service Board {
  rpc ShowMessage (google.protobuf.Empty) returns (stream MessageReply) {}
}

message ImageMetaData {
  string mime_type = 1;
  string file_name = 2;
}

message ImageChunk {
    bytes data = 1;
    int32 length = 2;
}

message MessageReply {
  oneof image {
    ImageMetaData meta_data = 1;
    ImageChunk chunk = 2;
  }
}
